RESOLVED FIXED32162
Assert in BidiContext is wrong and only works by luck
https://bugs.webkit.org/show_bug.cgi?id=32162
Summary Assert in BidiContext is wrong and only works by luck
Adam Treat
Reported 2009-12-04 08:57:26 PST
The first assert in BidiContext only works through sheer luck. The enum WTF::Unicode::Direction has LeftToRight == 0 and RightToLeft == 1 for both ICU and Qt4. Other implementations that have different values for this enum will fail. Fix coming...
Attachments
Fix for assert. (1.12 KB, patch)
2009-12-04 09:02 PST, Adam Treat
mitz: review+
Adam Treat
Comment 1 2009-12-04 09:02:48 PST
Created attachment 44319 [details] Fix for assert.
WebKit Review Bot
Comment 2 2009-12-04 09:07:28 PST
style-queue ran check-webkit-style on attachment 44319 [details] without any errors.
Adam Treat
Comment 3 2009-12-04 09:14:43 PST
Landed with r51697.
Note You need to log in before you can comment on or make changes to this bug.