Fix wrong assert that was only working through sheer luck. https://bugs.webkit.org/show_bug.cgi?id=32162

Patch by Adam Treat <atreat@rim.com> on 2009-12-04
Reviewed by Dan Bernstein.

* platform/text/BidiContext.cpp:
(WebCore::BidiContext::create):

Canonical link: https://commits.webkit.org/43124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51697 268f45cc-cd09-0410-ab3c-d52691b4dbfc